--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/webpack-dev-server": "^4.7.2",
+    "@types/webpack-env": "^1.16.3",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-preset-react": "^6.24.1",
@@ -30,25 +36,27 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.4.0",
-    "postcss": "^8.2.15",
-    "postcss-loader": "^5.2.0",
-    "postcss-preset-env": "^6.7.0",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
+    "typescript": "^4.5.5",
     "webpack": "^5.28.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.6.0"
   },
   "dependencies": {
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.7",
+    "postcss": "^8.4.6",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "uuid": "^8.3.2"
+    "ts-loader": "^9.2.6",
+    "uuid": "^8.3.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "description": "A starting project including MongoDB, Express, React and node"
 }
