--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@types/emoji-mart": "^3.0.9",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
@@ -47,6 +48,7 @@
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "emoji-mart": "^3.0.1",
     "nodemon": "^2.0.7",
     "postcss": "^8.4.6",
     "postcss-loader": "^6.2.1",
