--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "emoji-mart": "^3.0.1",
+    "emoji-picker-react": "^3.5.1",
+    "i": "^0.3.7",
     "nodemon": "^2.0.7",
+    "npm": "^8.5.5",
     "postcss": "^8.4.6",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.1",
