--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
-    "@types/emoji-mart": "^3.0.9",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
-    "@types/webpack-dev-server": "^4.7.2",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -45,20 +43,20 @@
     "webpack-cli": "^4.6.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "concurrently": "^6.0.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "emoji-mart": "^3.0.1",
-    "emoji-picker-react": "^3.5.1",
     "nodemon": "^2.0.7",
     "postcss": "^8.4.6",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "ts-loader": "^9.2.6",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.8.1"
   },
   "description": "A starting project including MongoDB, Express, React and node"
 }
